--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "6d03aa78-c6bf-4b6a-8b8d-5d1e8f9bca10"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
